--- a/src/index.css
+++ b/src/index.css
@@ -129,23 +129,24 @@ nav a:hover {
   margin-top: 18em;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-size: 40px;
   font-weight: 700;
   line-height: 46px;
 }
 
-.header-content >h1,
-.header-content >p {
+.header-content > h1,
+.header-content > p {
   text-align: left;
 
   margin-left: 7%;
 }
-.header-content >h1{
+.header-content > h1 {
   width: 30%;
 }
 
-.header-content >p {
+.header-content > p {
   width: 27%;
 }
 
@@ -177,9 +178,9 @@ button {
   font-weight: 900;
   background: transparent;
   background-color: #7c1575;
- width:20px;
- padding: 5px;
- padding-top: 0px;
+  width: 20px;
+  padding: 5px;
+  padding-top: 0px;
   height: 18px;
   border-radius: 12px;
 }
@@ -261,14 +262,13 @@ button {
   gap: 1em;
 }
 
-h2,h3  {
-
+h2,
+h3 {
   font-size: 45px;
   font-weight: 700;
   line-height: 45px;
   text-align: left;
   color: #ad31a5;
- 
 }
 
 .services-paragraph {
@@ -978,13 +978,13 @@ textarea {
     margin-top: 20%;
   }
 
-  .header-content >h1 {
+  .header-content > h1 {
     font-size: 58px;
     line-height: 62px;
     width: 30%;
   }
 
-  .header-content >p {
+  .header-content > p {
     width: 27%;
     font-size: 20px;
   }
@@ -1105,18 +1105,20 @@ textarea {
     margin-top: 25%;
   }
 
-  .header-content >h1, .header-content >h2,
-  .header-content >p {
+  .header-content > h1,
+  .header-content > h2,
+  .header-content > p {
     margin-left: 8%;
   }
 
-  .header-content >h1, .header-content >h2 {
+  .header-content > h1,
+  .header-content > h2 {
     font-size: 28px;
     line-height: 25px;
     width: 33%;
   }
 
-  .header-content >p {
+  .header-content > p {
     width: 33%;
     font-size: 12px;
   }
@@ -1218,6 +1220,11 @@ textarea {
   .footer-top {
     text-align: center;
   }
+
+  .book-us-form {
+    padding: 1em;
+    margin-top: -1em;
+  }
 }
 
 @media only screen and (width > 701px) and (max-width: 999px) {
@@ -1250,7 +1257,7 @@ textarea {
     margin-top: 26%;
   }
 
-  .purp-circle{
+  .purp-circle {
     margin-top: -4em;
   }
 
@@ -1367,19 +1374,17 @@ textarea {
     margin-left: -5px;
   }
 
-  
-.cart-counter {
-  position: absolute;
-  margin-left: -4em;
-  color: #7c1575 ;
-  font-weight: 900;
-  background: transparent;
-  background-color: red;
- width:20px;
- padding: 6px;
- padding-top: 0px;
- 
-}
+  .cart-counter {
+    position: absolute;
+    margin-left: -4em;
+    color: #7c1575;
+    font-weight: 900;
+    background: transparent;
+    background-color: red;
+    width: 20px;
+    padding: 6px;
+    padding-top: 0px;
+  }
   .navbar.links {
     display: none;
   }
@@ -1430,7 +1435,7 @@ textarea {
   .header-wallpaper {
     position: absolute;
     width: 100%;
- height: 800px;
+    height: 800px;
     object-fit: cover;
     top: 0;
     z-index: -1;
@@ -1471,27 +1476,30 @@ textarea {
     margin-top: 60%;
   }
 
-  .header-content >h1, .header-content >h2,
-  .header-content >p {
+  .header-content > h1,
+  .header-content > h2,
+  .header-content > p {
     text-align: left;
     margin-left: 13%;
   }
 
-  .header-content >h1, .header-content >h2 {
+  .header-content > h1,
+  .header-content > h2 {
     width: 50%;
     font-size: 24px;
     font-weight: 700;
     line-height: 24px;
   }
 
-  .header-content >p {
+  .header-content > p {
     width: 40%;
     font-size: 12px;
     font-weight: 600;
     line-height: 12px;
   }
 
-  h2,h3 {
+  h2,
+  h3 {
     margin: 0 auto;
     font-size: 20px;
     line-height: 20px;
@@ -2131,18 +2139,20 @@ textarea {
     left: 12%;
   }
 
-  .header-content >h1, .header-content >h2 {
+  .header-content > h1,
+  .header-content > h2 {
     width: 70%;
   }
-  .header-content >p {
+  .header-content > p {
     width: 65%;
   }
 
   .tag {
     margin-top: -1.3em;
   }
-  .header-content >h1, .header-content >h2,
-  .header-content >p {
+  .header-content > h1,
+  .header-content > h2,
+  .header-content > p {
     margin-left: 12%;
   }
   .purp-circle {
@@ -2229,19 +2239,21 @@ textarea {
     height: 300px;
   }
 
-  .header-content >h1, .header-content >h2,
-  .header-content >p {
+  .header-content > h1,
+  .header-content > h2,
+  .header-content > p {
     margin-left: 10%;
   }
   .header-content {
     margin: 0 auto;
     margin-top: 11em;
   }
-  .header-content >h1, .header-content >h2 {
+  .header-content > h1,
+  .header-content > h2 {
     width: 90%;
   }
 
-  .header-content >p {
+  .header-content > p {
     width: 80%;
   }
 
@@ -2369,7 +2381,7 @@ textarea {
     height: 110%;
   }
 
-  .header-content >p {
+  .header-content > p {
     width: 70%;
   }
 
