--- a/src/index.css
+++ b/src/index.css
@@ -64,16 +64,13 @@ nav a {
   left: 0;
   width: 0;
   height: 2px;
-  background: #fff;
+  background: #000000;
 }
 .navbar a:hover::before {
   width: 100%;
   transition: 0.3s;
 }
 
-nav a:hover {
-  color: #fff;
-}
 
 .nav-btn {
   display: none;
@@ -103,9 +100,12 @@ nav a:hover {
   justify-content: space-between;
   top: 5%;
   background: #f4f4f4;
-  width: 97%;
+  width: 100%;
   margin: 0 auto;
   padding-top: 1em;
+  padding-left: 3em;
+  padding-right: 3em;
+
   padding-bottom: -1em;
   z-index: 1;
 }
