--- a/src/index.css
+++ b/src/index.css
@@ -28,14 +28,16 @@ body {
 }
 
 .logo{
+
   margin-top: -10px;
+  width: 197px;
+  height: 67px;
 }
 
 .navigator {
   position: fixed;
-  width: 50%;
-  left: 25%;
-  background: #f4f4f4;
+  width: 449px;
+ margin-left:30%;
   z-index: 1;
   margin-top: -5px;
   font-family: "Inter";
@@ -94,21 +96,29 @@ nav a {
 }
 
 .header-top {
- border-radius:300px;
+ border-radius:29px;
   position: fixed;
   display: flex;
   justify-content: space-between;
   top: 5%;
-  background: #f4f4f4;
-  width: 100%;
   margin: 0 auto;
+  background: #f4f4f4;
+  margin-left: 10%;
+width: 1200px; 
+height: 67px;
   padding-top: 1em;
-  padding-left: 3em;
-  padding-right: 3em;
-
   padding-bottom: -1em;
   z-index: 1;
 }
+
+.header-top-bottom{
+  display: flex;
+gap: 1.5em;
+  position: absolute;
+margin-left: 82%;
+margin-top: -5px;
+}
+
 
 .purp-circle {
   margin: -8em 3em;
@@ -119,7 +129,7 @@ nav a {
 
 .ring {
   position: absolute;
-  width: 3%;
+  width: 7%;
   top: 90%;
   left: 6%;
 }
@@ -169,10 +179,9 @@ button {
 }
 
 .cart-icon-container {
-  position: fixed;
-  left: 82%;
   cursor: pointer;
   margin-top: 10px;
+  
 }
 
 .cart-counter {
@@ -190,9 +199,9 @@ button {
 }
 
 .lets-talk {
-  position: absolute;
+
   background: #ad31a5;
-  left: 85vw;
+
 }
 
 .lets-talk-container {
@@ -313,7 +322,9 @@ opacity: 2000%;
   gap: 1em;
 }
 
-
+.event-image1{
+width: 297px;
+}
 
 .event-card > img {
   width: 100%;
@@ -996,6 +1007,23 @@ textarea {
 }
 
 @media only screen and (width > 1509px) {
+  .header-top{
+    width: 80%;
+
+  }
+  .navigator{
+    margin-left:20%;
+    width:600px;
+gap: 0em;
+  }
+
+  .header-top-bottom{
+    margin-left: 87%;
+  }
+
+
+
+
   .navbar {
     gap: 4em;
   }
@@ -1026,7 +1054,7 @@ textarea {
     margin-left: 15em;
   }
   .event-image1 {
-    max-width: 20%;
+  max-width: 297px;
     height: auto;
   }
 
@@ -1056,7 +1084,7 @@ textarea {
 
   .cart-icon-container {
     position: absolute;
-    left: 80%;
+    left:-40%;
   }
 
   .review-inner-carousel {
@@ -1081,7 +1109,11 @@ textarea {
     margin: 0em 21em;
   }
 }
-@media only screen and (width > 1220px) and (width <1440px) {
+@media only screen and (width > 1220px) and (width <1509px) {
+
+  .event-image1{
+    max-width: 297px;
+  }
   .formcard-label {
     margin-left: 15%;
   }
@@ -1089,21 +1121,21 @@ textarea {
   .lets-talk-container {
     max-width: 50%;
   }
+
+  .header-top{
+    width: 80%;
+   margin-left: 10%;
+}
+
+.navigator{
+  margin-left: 18em;}
 }
 
 @media only screen and (width > 701px) and (width <1220px) {
-  .navigator {
-    margin-top: 0.5em;
-  }
-  .header-top {
-    margin: 1em 2em;
-  }
-
-  .lets-talk {
-    margin-top: 3em;
-    height: 30px;
-    padding: 0;
-  }
+  .navigator{
+    margin-left: 13em;}
+  
+ 
   .lets-talk-container {
     max-width: 30%;
     margin-top: 8em;
@@ -1118,12 +1150,17 @@ textarea {
   }
 
   .header-top {
-    top: -1%;
-    width: 100%;
+   top: 3%;
+left: 5%;
+    width: 90%;
     margin: 0 auto;
-    padding-top: 2em;
-    padding-bottom: 2em;
+    padding-top: 1em;
+    padding-bottom: 3em;
   }
+
+
+  .header-top-bottom{
+    margin-left: 79%;  }
 
   .header-content {
     position: relative;
@@ -1164,13 +1201,13 @@ textarea {
 
   .event-image1 {
     position: absolute;
-    max-width: 30%;
+    max-width: 300px;
     height: auto;
     left: 65%;
   }
 
   .services-container {
-    margin-top: 11em;
+    margin-top: 15em;
   }
 
   .specials-container {
@@ -1254,6 +1291,12 @@ textarea {
 }
 
 @media only screen and (width > 701px) and (max-width: 999px) {
+  .header-top{
+    margin-top: -5px;
+  }
+  .navigator{
+    margin-left: 20%;
+  }
   .ring {
     left: 10%;
   }
@@ -1264,6 +1307,7 @@ textarea {
 
   .lets-talk {
     margin-left: -2em;
+    display: none;
   }
 
   .lets-talk2 {
@@ -1273,9 +1317,7 @@ textarea {
   .logo {
     margin-left: -1em;
   }
-  .navigator {
-    max-width: 600px;
-  }
+ 
 
   .header-content {
     position: relative;
@@ -1320,7 +1362,7 @@ textarea {
   }
 
   .cart-icon-container {
-    margin-right: -40%;
+  margin-left: 4em;
   }
 
   .services-paragraph {
@@ -1354,7 +1396,7 @@ textarea {
 
   .event-image1 {
     position: absolute;
-    max-width: 30%;
+    width: 250px;
     height: auto;
     left: 60%;
     margin-top: 2.2em;
@@ -1383,14 +1425,17 @@ textarea {
 }
 
 @media only screen and (width< 702px) {
+
+
   .container-top {
     margin: 0em 5em;
   }
   .back-to-top {
-    left: 90%;
+    margin-left: -5%;
+    width:50px;
   }
   .top-arrow {
-    width: 100%;
+    width: 50%;
   }
   .desktop {
     display: none;
@@ -1477,10 +1522,12 @@ textarea {
     display: flex;
     margin: 0em 0em;
     position: relative;
-    width: 100%;
+    width: 90%;
+    margin-top: 1em;
+    background: none;
     padding-top: 1em;
     padding-bottom: 1em;
-    background: none;
+   
   }
 
   .logo {
@@ -1558,6 +1605,7 @@ textarea {
     width: 100%;
   }
 
+  
   .services-bottom {
     margin: 1em 2em;
     display: flex;
@@ -1578,7 +1626,7 @@ textarea {
 
   .event-card {
     margin: 0 auto;
-    max-width: 60%;
+    max-width:297px;
     height: auto;
   }
 
@@ -2233,8 +2281,12 @@ textarea {
   }
 
   .event-image1 {
-    max-width: 70%;
+    max-width: 297px;
     height: auto;
+  }
+
+  .event-image{
+    max-width: 297px;
   }
 
   .total{
@@ -2263,6 +2315,15 @@ margin-top: -2em;
   .nothing-wrapper{
     margin-top: -1.2em;
   }
+
+  .event-image1 {
+    width: 297px;
+  }
+  .event-card{
+    max-width: 297px;
+  }
+
+  
 }
 
 @media only screen and (width < 392px) {
@@ -2337,10 +2398,14 @@ margin-top: -2em;
     width: 100%;
   }
 
+ 
   .event-card {
     margin: 0 auto;
-    max-width: 90%;
+    max-width: 297px;
     height: auto;
+  }
+  .event-image1 {
+    max-width: 297px;
   }
 
   .event-overlay {
@@ -2427,11 +2492,12 @@ margin-top: -2em;
   .header-content > p {
     width: 70%;
   }
+.event-card{
+  max-width: 224px;
+}
 
-  .event-image1 {
-    max-width: 100%;
-    height: auto;
-  }
+  
+ 
 
   .trash-box {
     position: absolute;
