--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,7 @@ body {
   font-family: "Josefin Sans";
 }
 
-.logo{
-
+.logo {
   margin-top: -10px;
   width: 197px;
   height: 67px;
@@ -37,7 +36,7 @@ body {
 .navigator {
   position: fixed;
   width: 449px;
- margin-left:30%;
+  margin-left: 30%;
   z-index: 1;
   margin-top: -5px;
   font-family: "Inter";
@@ -73,7 +72,6 @@ nav a {
   transition: 0.3s;
 }
 
-
 .nav-btn {
   display: none;
 }
@@ -96,7 +94,7 @@ nav a {
 }
 
 .header-top {
- border-radius:29px;
+  border-radius: 29px;
   position: fixed;
   display: flex;
   justify-content: space-between;
@@ -104,21 +102,20 @@ nav a {
   margin: 0 auto;
   background: #f4f4f4;
   margin-left: 10%;
-width: 1200px; 
-height: 67px;
+  width: 1200px;
+  height: 67px;
   padding-top: 1em;
   padding-bottom: -1em;
-  z-index: 1;
+  z-index: 2;
 }
 
-.header-top-bottom{
+.header-top-bottom {
   display: flex;
-gap: 1.5em;
+  gap: 1.5em;
   position: absolute;
-margin-left: 82%;
-margin-top: -5px;
+  margin-left: 82%;
+  margin-top: -5px;
 }
-
 
 .purp-circle {
   margin: -8em 3em;
@@ -129,9 +126,10 @@ margin-top: -5px;
 
 .ring {
   position: absolute;
-  width: 7%;
+  width: 100px;
+
   top: 90%;
-  left: 6%;
+  left: 8.5%;
 }
 .header-content {
   position: relative;
@@ -152,15 +150,15 @@ h2 {
 .header-content > h1,
 .header-content > p {
   text-align: left;
-
-  margin-left: 7%;
+  margin-left: 10%;
 }
-.header-content > h1 {
-  width: 30%;
+
+h1 {
+  width: 40%;
 }
 
 .header-content > p {
-  width: 27%;
+  width: 350px;
 }
 
 .header-description {
@@ -181,7 +179,6 @@ button {
 .cart-icon-container {
   cursor: pointer;
   margin-top: 10px;
-  
 }
 
 .cart-counter {
@@ -199,9 +196,7 @@ button {
 }
 
 .lets-talk {
-
   background: #ad31a5;
-
 }
 
 .lets-talk-container {
@@ -245,12 +240,13 @@ button {
   background: #f6cfa0;
   margin-top: 4em;
   margin-left: 10em;
-
+  color: #000000;
   padding: 0;
+  z-index: 1;
 }
 
 .tag {
-  max-width: 14.5%;
+  max-width: 218px;
   position: absolute;
   margin-top: -2em;
   margin-left: -0.3em;
@@ -298,21 +294,18 @@ h3 {
   color: #000000;
 }
 
-
-
-.event-card{
+.event-card {
   opacity: 80%;
 }
 
-.event-card:hover{
-opacity: 2000%;
+.event-card:hover {
+  opacity: 2000%;
 }
 
 .event-overlay {
   text-align: center;
   margin-top: -3.5em;
   color: #fff;
-
 }
 
 .services-bottom {
@@ -322,8 +315,8 @@ opacity: 2000%;
   gap: 1em;
 }
 
-.event-image1{
-width: 297px;
+.event-image1 {
+  width: 297px;
 }
 
 .event-card > img {
@@ -991,38 +984,34 @@ textarea {
 }
 
 @media only screen and (width >1981px) {
-  .header-content {
-    margin-top: 15%;
+  .lets-talk2 {
+    position: relative;
+    margin-left: 40em;
   }
-
-  
-  .header-content >h1{
-    max-width: 25%;
-  }
-
-
   .services-container {
     padding-top: 5em;
   }
 }
 
 @media only screen and (width > 1509px) {
-  .header-top{
+  .header-top {
     width: 80%;
-
   }
-  .navigator{
-    margin-left:20%;
-    width:600px;
-gap: 0em;
+  .navigator {
+    margin-left: 20%;
+    width: 600px;
+    gap: 0em;
   }
 
-  .header-top-bottom{
+  .header-top-bottom {
     margin-left: 87%;
   }
 
-
-
+  .header-content > h1,
+  .header-content > h2,
+  .header-content > p {
+    margin-left: 13%;
+  }
 
   .navbar {
     gap: 4em;
@@ -1032,35 +1021,36 @@ gap: 0em;
   }
 
   .header-content > h1 {
-    font-size: 58px;
-    line-height: 62px;
- width: 33%;
+    width: 517px;
   }
 
   .header-content > p {
-    width: 27%;
-    font-size: 20px;
+    width: 370px;
   }
   .purp-circle {
-    width: 800px;
-    margin-left: 5em;
-    margin-top: -10em;
+    width: 528px;
+    margin-left: 9%;
+    margin-top: -8em;
   }
 
   .tag {
     margin-top: -35px;
   }
   .lets-talk2 {
-    margin-left: 15em;
+    margin-left: 14%;
+  }
+
+  .ring {
+    margin-left: 4em;
   }
   .event-image1 {
-  max-width: 297px;
+    max-width: 297px;
     height: auto;
   }
 
   .event-card > img {
     width: 100%;
-    color: #0000
+    color: #0000;
   }
   .services-container {
     margin: 0% 5%;
@@ -1084,7 +1074,7 @@ gap: 0em;
 
   .cart-icon-container {
     position: absolute;
-    left:-40%;
+    left: -40%;
   }
 
   .review-inner-carousel {
@@ -1110,8 +1100,10 @@ gap: 0em;
   }
 }
 @media only screen and (width > 1220px) and (width <1509px) {
-
-  .event-image1{
+  .purp-circle {
+    width: 514px;
+  }
+  .event-image1 {
     max-width: 297px;
   }
   .formcard-label {
@@ -1119,26 +1111,28 @@ gap: 0em;
   }
 
   .lets-talk-container {
-    max-width: 50%;
+    margin-top: 2em;
+    max-width: 400px;
   }
 
-  .header-top{
+  .header-top {
     width: 80%;
-   margin-left: 10%;
-}
+    margin-left: 10%;
+  }
 
-.navigator{
-  margin-left: 18em;}
+  .navigator {
+    margin-left: 18em;
+  }
 }
 
 @media only screen and (width > 701px) and (width <1220px) {
-  .navigator{
-    margin-left: 13em;}
-  
- 
+  .navigator {
+    margin-left: 13em;
+  }
+
   .lets-talk-container {
-    max-width: 30%;
-    margin-top: 8em;
+    max-width: 400px;
+    margin-top: 3em;
     margin-left: -21em;
   }
 
@@ -1150,49 +1144,51 @@ gap: 0em;
   }
 
   .header-top {
-   top: 3%;
-left: 5%;
+    top: 3%;
+    left: 5%;
     width: 90%;
     margin: 0 auto;
     padding-top: 1em;
     padding-bottom: 3em;
   }
 
-
-  .header-top-bottom{
-    margin-left: 79%;  }
+  .header-top-bottom {
+    margin-left: 79%;
+  }
 
   .header-content {
     position: relative;
     margin: 0 auto;
-    margin-top: 25%;
+    margin-top: 20%;
   }
 
   .header-content > h1,
   .header-content > h2,
   .header-content > p {
-    margin-left: 8%;
+    margin-left: 13%;
   }
 
-  .header-content > h1,
-  .header-content > h2 {
+  .header-content > h1 {
     font-size: 28px;
-    line-height: 25px;
-    width: 33%;
+    line-height: 32px;
+    width: 400px;
   }
 
   .header-content > p {
-    width: 33%;
+    width: 260px;
     font-size: 12px;
   }
 
   .purp-circle {
     margin: -5em 3em;
-    max-width: 35%;
+    width: 514px;
   }
 
   .tag {
-    margin-top: -1.5em;
+    margin-top: -2.8em;
+    margin-left: -5px;
+    width: 158px;
+    height: 83px;
   }
 
   .lets-talk2 {
@@ -1291,18 +1287,20 @@ left: 5%;
 }
 
 @media only screen and (width > 701px) and (max-width: 999px) {
-  .header-top{
+  .header-top {
     margin-top: -5px;
   }
-  .navigator{
+  .navigator {
     margin-left: 20%;
   }
   .ring {
-    left: 10%;
+    left: 5%;
+    width: 11%;
+    margin-top: -1em;
   }
   .lets-talk-container {
     margin-top: 7em;
-    margin-left: -17em;
+    margin-left: -9em;
   }
 
   .lets-talk {
@@ -1311,22 +1309,21 @@ left: 5%;
   }
 
   .lets-talk2 {
-    height: 30px;
     margin-left: 7.5em;
   }
   .logo {
     margin-left: -1em;
   }
- 
 
   .header-content {
     position: relative;
     margin: 0 auto;
-    margin-top: 26%;
+    margin-top: 18%;
   }
 
   .purp-circle {
-    margin-top: -4em;
+    margin-top: -8em;
+    max-width: 380px;
   }
 
   .product-details {
@@ -1362,7 +1359,7 @@ left: 5%;
   }
 
   .cart-icon-container {
-  margin-left: 4em;
+    margin-left: 4em;
   }
 
   .services-paragraph {
@@ -1418,21 +1415,18 @@ left: 5%;
   .footer-flex {
     margin-top: -3em;
   }
-  .total{
+  .total {
     margin-left: -2.5em;
   }
-  
 }
 
 @media only screen and (width< 702px) {
-
-
   .container-top {
     margin: 0em 5em;
   }
   .back-to-top {
     margin-left: -5%;
-    width:50px;
+    width: 50px;
   }
   .top-arrow {
     width: 50%;
@@ -1440,6 +1434,7 @@ left: 5%;
   .desktop {
     display: none;
   }
+
   .mobile {
     display: block;
   }
@@ -1527,12 +1522,10 @@ left: 5%;
     background: none;
     padding-top: 1em;
     padding-bottom: 1em;
-   
   }
 
   .logo {
     padding: 0em 2em;
-
     margin-left: -5%;
   }
 
@@ -1556,17 +1549,15 @@ left: 5%;
     margin-left: 13%;
   }
 
-  .header-content > h1,
-  .header-content > h2 {
-    width: 50%;
+  .header-content > h1{
     font-size: 24px;
     font-weight: 700;
     line-height: 24px;
   }
 
   .header-content > p {
-    width: 40%;
-    font-size: 12px;
+
+    font-size: 10px;
     font-weight: 600;
     line-height: 12px;
   }
@@ -1605,7 +1596,6 @@ left: 5%;
     width: 100%;
   }
 
-  
   .services-bottom {
     margin: 1em 2em;
     display: flex;
@@ -1626,7 +1616,7 @@ left: 5%;
 
   .event-card {
     margin: 0 auto;
-    max-width:297px;
+    max-width: 297px;
     height: auto;
   }
 
@@ -1652,7 +1642,6 @@ left: 5%;
     overflow: hidden;
     position: relative;
     width: 100%;
-    /* Hide vertical scrollbar */
   }
 
   .food-item-card {
@@ -1721,7 +1710,7 @@ left: 5%;
   .lets-talk2 {
     margin: 0 auto;
     margin-top: 2em;
-    margin-left: 23%;
+  margin-left:8em;
   }
 
   .services2-container h3 {
@@ -2133,7 +2122,6 @@ left: 5%;
     margin-top: 1em;
   }
 
-
   .price,
   .total {
     margin-top: 2em;
@@ -2210,25 +2198,24 @@ left: 5%;
 
 @media only screen and (width >390px) and (width <701px) {
   .ring {
-    width: 10%;
-    left: 12%;
+    width: 90px;
+    left: 50px;
   }
-
-  .header-content > h1,
-  .header-content > h2 {
-    width: 70%;
+  .header-content > h1 {
+    width:310px;
   }
   .header-content > p {
-    width: 65%;
+    width: 220px;
   }
 
   .tag {
-    margin-top: -1.3em;
+    margin-top: -2em;
+    max-width: 130px;
   }
   .header-content > h1,
   .header-content > h2,
   .header-content > p {
-    margin-left: 12%;
+    margin-left: 14%;
   }
   .purp-circle {
     margin: -6em 2em;
@@ -2274,10 +2261,9 @@ left: 5%;
 
   .lets-talk-container {
     position: absolute;
-
-    max-width: 50%;
-    margin-left: -55%;
+    max-width: 400px;
     margin-top: 4em;
+    margin-left: -16em;
   }
 
   .event-image1 {
@@ -2285,14 +2271,13 @@ left: 5%;
     height: auto;
   }
 
-  .event-image{
+  .event-image {
     max-width: 297px;
   }
 
-  .total{
+  .total {
     margin-left: -2em;
   }
-
 }
 
 @media only screen and (width >391px) and (width <700px) {
@@ -2304,26 +2289,24 @@ left: 5%;
   .services-container {
     margin-top: 20em;
   }
-.book-header{
-  margin-top: -5px;
-}
+  .book-header {
+    margin-top: -5px;
+  }
 
-.cart-flex{
-margin-top: -2em;
-}
-  
-  .nothing-wrapper{
+  .cart-flex {
+    margin-top: -2em;
+  }
+
+  .nothing-wrapper {
     margin-top: -1.2em;
   }
 
   .event-image1 {
     width: 297px;
   }
-  .event-card{
+  .event-card {
     max-width: 297px;
   }
-
-  
 }
 
 @media only screen and (width < 392px) {
@@ -2336,8 +2319,8 @@ margin-top: -2em;
   }
 
   .ring {
-    width: 10%;
-    left: 16%;
+    width: 70px;
+    left: 30px;
   }
   .wallpaper2 {
     height: 300px;
@@ -2346,24 +2329,23 @@ margin-top: -2em;
   .header-content > h1,
   .header-content > h2,
   .header-content > p {
-    margin-left: 10%;
+    margin-left: 25%;
   }
   .header-content {
     margin: 0 auto;
     margin-top: 11em;
   }
-  .header-content > h1,
-  .header-content > h2 {
-    width: 90%;
+  .header-content > h1{
+    width: 300px;
   }
 
   .header-content > p {
-    width: 80%;
+    width: 230px;
   }
 
   .tag {
     position: absolute;
-    margin-top: -1.2em;
+    margin-top: -1.6em;
     max-width: 35%;
   }
   .purp-circle {
@@ -2375,6 +2357,7 @@ margin-top: -2em;
   .lets-talk2 {
     padding: 0em;
     height: 24px;
+    margin-left:6em;
   }
 
   .specials-header > p {
@@ -2398,7 +2381,6 @@ margin-top: -2em;
     width: 100%;
   }
 
- 
   .event-card {
     margin: 0 auto;
     max-width: 297px;
@@ -2477,9 +2459,8 @@ margin-top: -2em;
   }
   .lets-talk-container {
     position: absolute;
-
-    max-width: 60%;
-    margin-left: -80%;
+    width: 200px;
+    margin-left: -12em;
     margin-top: 4em;
   }
 }
@@ -2490,14 +2471,11 @@ margin-top: -2em;
   }
 
   .header-content > p {
-    width: 70%;
+   max-width: 220px;
   }
-.event-card{
-  max-width: 224px;
-}
-
-  
- 
+  .event-card {
+    max-width: 224px;
+  }
 
   .trash-box {
     position: absolute;
@@ -2525,5 +2503,11 @@ margin-top: -2em;
   }
   .cart-list {
     padding: 0px;
+  }
+  .header-content > h1,
+  .header-content > h2,
+  .header-content > p {
+    margin-left: 16%;
+    width: auto;
   }
 }
